--- a/iso-template/mips64el/EFI/BOOT/grub.cfg
+++ b/iso-template/mips64el/EFI/BOOT/grub.cfg
@@ -6,14 +6,14 @@ set menu_color_highlight=yellow/black
 
 search --no-floppy --set=root -l 'GXDEOS'
 
-menuentry 'Try Or Install GXDE (Newer Linux Kernel)'{
-linux /live/vmlinuz console=tty quiet splash livecd locale=zh_CN.UTF-8 boot=live
+menuentry 'Install GXDE (Newer Linux Kernel)'{
+linux /live/vmlinuz console=tty quiet splash livecd locale=zh_CN.UTF-8 boot=live locales=zh_CN.UTF-8
 initrd /live/initrd.img
 boot
 }
 
-menuentry 'Try Or Install GXDE (Old Stable Linux Kernel)'{
-linux /live/vmlinuz-oldstable console=tty quiet splash livecd locale=zh_CN.UTF-8 boot=live
+menuentry 'Install GXDE (Old Stable Linux Kernel)'{
+linux /live/vmlinuz-oldstable console=tty quiet splash livecd locale=zh_CN.UTF-8 boot=live locales=zh_CN.UTF-8
 initrd /live/initrd.img-oldstable
 boot
 }
