修复因内核名称为vmlinux而非vmlinuz时无法构建iso的问题
Signed-off-by: gfdgd_xi <3025613752@qq.com>

--- a/iso-template/riscv64/boot/grub/grub.cfg
+++ b/iso-template/riscv64/boot/grub/grub.cfg
@@ -12,8 +12,8 @@ set menu_color_highlight=black/light-gray
 set theme=/boot/grub/themes/deepin/theme.txt
 menuentry "Try Or Install GXDE (Rolling Kernel)" {
 	set gfxpayload=keep
-	linux	/live/vmlinuz-6.6 boot=live union=overlay locales=zh_CN.UTF-8 console=tty quiet splash --
-	initrd	/live/initrd-6.6.img
+	linux	/live/vmlinuz boot=live union=overlay locales=zh_CN.UTF-8 console=tty quiet splash --
+	initrd	/live/initrd.img
 }
 menuentry "Try Or Install GXDE (HWE Kernel)" {
 	set gfxpayload=keep
